# minisketch

./: .cirrus.yml  .gitignore  CMakeLists.txt  configure.ac
.github/workflows/: ci.yml
ci/: cirrus.sh  linux-debian.Dockerfile
cmake/: PrintConfigureSummary.cmake  SystemIntrospection.cmake
include/: minisketch.h
src/: CMakeLists.txt  bench.cpp  int_utils.h  sketch_impl.h
src/fields/: CMakeLists.txt
